Cleanup (minor optimization; suppressions; formatting)
GitOrigin-RevId: 68bd15eab50228fcb1961d13b3cd5e6dd351bb9a